@@ -34,6 +34,9 @@
  ******************************************************************************
  *
  * $Log$
+ * Revision 1.60  2009-09-17 20:50:02  bram
+ * on Win32, define snprintf as alias to _snprintf
+ *
  * Revision 1.59  2008-03-14 05:25:31  fwarmerdam
  * Correct crash on buggy geometries (gdal #2218)
  *
@@ -250,6 +253,12 @@ typedef int	      int32;
 #ifndef MAX
 #  define MIN(a,b)      ((a<b) ? a : b)
 #  define MAX(a,b)      ((a>b) ? a : b)
+#endif
+
+#if defined(WIN32) || defined(_WIN32)
+#  ifndef snprintf
+#     define snprintf _snprintf
+#  endif
 #endif
 
 static int 	bBigEndian;
