@@ -1,3 +1,7 @@
+2009-09-17  Bram de Greve <bram.degreve@bramz.net>
+
+	* shpopen.c: on Win32, define snprintf as alias to _snprintf
+
 2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shptree.c: improve safety in face of buggy .shp file. 
